# OOP2_gameLogic

./: CMakeLists.txt  README.docx  README.md
cmake/: FindLua.cmake  SFML.cmake
include/: AIComponent.h  AIStrategy.h  App.h  Ball.h  BoxEntity.h  CMakeLists.txt  Cactus.h  CactusEntity.h  CameraController.h  CameraManager.h  CloseBox.h  Coin.h  CoinEntity.h  Collectible.h  CollectibleEntity.h  CollisionAdapter.h  CollisionManager.h  CollisionResolver.h  CollisionSystem.h  Component.h  ComponentSFINAE.h  ComponentTraitSpecializations.h  ComponentTraits.h  ComponentUtils.h  ComponentUtils.inl  Constants.h  DamageComponents.h  DarkLevelSystem.h  DependencyResolver.h  DynamicGameObject.h  EnemyEntity.h  EnemyManager.h  Entity.h  EntityCleanupManager.h  EntityFactory.h  EntityManager.h  FalconEnemy.h  FalconEnemyEntity.h  Flag.h  FlagEntity.h  (+84 more)
include/AI/: AIStrategy.h  FollowPlayerStrategy.h  GuardStrategy.h  PatrolStrategy.h
include/Application/: AppCleanupManager.h  AppContext.h  GameInitializer.h  (+2 more)
resources/: CMakeLists.txt
src/: AIComponent.cpp  App.cpp  BackgroundRenderer.cpp  Ball.cpp  BoostedState.cpp  BoxEntity.cpp  CMakeLists.txt  Cactus.cpp  CactusEntity.cpp  CameraController.cpp  CameraManager.cpp  CloseBox.cpp  Coin.cpp  CoinEntity.cpp  CollectibleEntity.cpp  CollisionAdapterTest.cpp  CollisionManager.cpp  CollisionResolver.cpp  CollisionSystem.cpp  Component.cpp  DarkLevelSystem.cpp  DemoMain.cpp  EnemyEntity.cpp  EnemyManager.cpp  Entity.cpp  EntityCleanupManager.cpp  EntityFactory.cpp  EntityManager.cpp  FalconEnemy.cpp  FalconEnemyEntity.cpp  Flag.cpp  FlagEntity.cpp  FollowPlayerStrategy.cpp  GameCollisionSetup.cpp  GameLevelManager.cpp  GameObjectFactory.cpp  GameObjectManager.cpp  GameSession.cpp  GameStateManager.cpp  GameWorld.cpp  (+65 more)
src/AI/: AIStrategy.cpp  FollowPlayerStrategy.cpp  GuardStrategy.cpp  PatrolStrategy.cpp
src/Application/: App.cpp  AppCleanupManager.cpp  AppContext.cpp  GameInitializer.cpp  GameLoop.cpp  WindowManager.cpp
src/Commands/: ChangeScreenCommand.cpp  EscapeKeyCommand.cpp  ExitGameCommand.cpp  SettingsCommandHandler.cpp
src/Components/: AIComponent.cpp  CollisionComponent.cpp  HealthComponent.cpp  MovementComponent.cpp  PhysicsComponent.cpp  RenderComponent.cpp
src/Core/: AudioManager.cpp  AudioSettingsManager.cpp  CommandInvoker.cpp  Component.cpp  Entity.cpp  ScreenManager.cpp  SettingsResourceManager.cpp  Transform.cpp
src/Entities/Collectibles/: CoinEntity.cpp  CollectibleEntity.cpp  GiftEntity.cpp
src/Entities/Combat/: ProjectileEntity.cpp
src/Entities/Enemies/: EnemyEntity.cpp  FalconEnemyEntity.cpp  FalconWeaponSystem.cpp  SmartEnemyEntity.cpp  SquareEnemyEntity.cpp
src/Entities/Environment/: BoxEntity.cpp  CactusEntity.cpp  FlagEntity.cpp  GroundEntity.cpp  SeaEntity.cpp  WellEntity.cpp
src/Entities/Player/: PlayerEntity.cpp  PlayerInputHandler.cpp  PlayerScoreManager.cpp  PlayerStateManager.cpp  PlayerVisualEffects.cpp  PlayerWeaponSystem.cpp
src/Exceptions/: CMakeLists.txt  Exception.cpp  ExceptionRecoveryDemo.cpp  ExceptionRecoverySystem.cpp  GameCheckpoint.cpp  Logger.cpp  Logger_new.cpp  RecoveryStrategyFactory.cpp  ResourceRetry.cpp  UserFriendlyErrors.cpp
src/Game/: GameSession.cpp
src/Memory/: MemoryLeakDetector.cpp  MemoryManager.cpp  MemoryPoolBase.cpp  ProjectilePool.cpp
src/Performance/: CMakeLists.txt  ComponentPerformanceMonitor.cpp  MemoryTracker.cpp  PerformanceDemo.cpp  PerformanceOverlay.cpp  Profiler.cpp
src/Plugin/: DynamicPluginLoader.cpp  PluginBase.cpp  PluginHelper.cpp  PluginManager.cpp  PluginSandbox.cpp  PluginVersion.cpp
src/Property/: PropertyContainer.cpp  PropertyDescriptor.cpp  PropertyManager.cpp  PropertyValue.cpp  UndoManager.cpp
src/Screens/: AboutScreen.cpp  GameplayScreen.cpp  HelpScreen.cpp  LoadingScreen.cpp  MenuScreen.cpp  SettingsScreen.cpp
src/Scripting/: CMakeLists.txt  LuaScriptEngine.cpp  ScriptComponent.cpp  ScriptManager.cpp  ScriptPerformanceMonitor.cpp  ScriptingDemo.cpp
src/Scripting/lua_stub/: lauxlib.h  lua.h  lua_stub.c  lua_stub.h  lualib.h
src/Scripting/scripts/: sample.lua
src/Services/: Logger.cpp
src/Settings/: SettingsAutoSaveManager.cpp  SettingsCommandExecutor.cpp  SettingsEventLogger.cpp  SettingsInitializer.cpp  SettingsInputHandler.cpp
src/StateMachine/: CMakeLists.txt  StateMachineDemo.cpp
src/States/: BoostedState.cpp  HeadwindState.cpp  MagneticState.cpp  NormalState.cpp  ReversedState.cpp  ShieldedState.cpp
src/Systems/Collision/: GameCollisionSetup.cpp  MultiMethodCollisionSystem.cpp
src/Systems/Events/: EventSystem.cpp  GameEventCoordinator.cpp
src/Systems/Managers/: CameraManager.cpp  CollisionManager.cpp  EntityCleanupManager.cpp  EntityManager.cpp  GameLevelManager.cpp  LevelManager.cpp  PhysicsManager.cpp  SurpriseBoxManager.cpp
src/Systems/Rendering/: BackgroundRenderer.cpp  DarkLevelSystem.cpp  RenderSystem.cpp
src/UI/: Button.cpp  ButtonFactory.cpp  ButtonInteraction.cpp  ButtonRenderer.cpp  GameOverScreen.cpp  GameplayScreen.cpp  MenuAnimationController.cpp  MenuButtonManager.cpp  MenuButtonObserver.cpp  MenuEventHandler.cpp  MenuRenderer.cpp  SettingsEventHandler.cpp  SettingsUIFactory.cpp  SettingsUIRenderer.cpp  Slider.cpp  SurpriseBoxScreen.cpp  UIObserver.cpp  UIOverlay.cpp  VolumeControlPanel.cpp  WinningScreen.cpp
src/Utilities/: EntityFactory.cpp  InputService.cpp  LevelLoader.cpp  VoiceInputService.cpp
tests/: CMakeLists.txt  CodeCoverage.cmake  README.md  TestReportGenerator.h  main.cpp
tests/fixtures/: CMakeLists.txt  ComponentFixture.h  MemoryFixture.h  ScriptingFixture.h
tests/fixtures/test_scripts/: test.lua
tests/integration/: CMakeLists.txt  SystemIntegrationTests.cpp
tests/mocks/: CMakeLists.txt  MockAIStrategy.h  MockComponent.h  MockPlugin.h  MockScriptEngine.h
tests/performance/: CMakeLists.txt  PerformanceBenchmarks.cpp
tests/unit/: CMakeLists.txt  EntityTests.cpp  ExceptionSystemTests.cpp  FuzzTests.cpp  MemoryPoolTests.cpp  MultiMethodDispatcherTests.cpp  PluginSystemTests.cpp  PropertySystemTests.cpp  ScriptingSystemTests.cpp  StateMachineTests.cpp
(+146 files in other folders)
